courses/编译原理实验/e5/y.output
Terminals unused in grammar

    FOR


State 218 conflicts: 1 shift/reduce


Grammar

    0 $accept: CompUnit $end

    1 CompUnit: FuncDef
    2         | Decl
    3         | CompUnit Decl
    4         | CompUnit FuncDef
    5         | error

    6 Decl: ConstDecl
    7     | VarDecl

    8 ConstDecl: CONST_WRAP BType ConstDefList ';'
    9          | CONST_WRAP BType ConstDefList error

   10 ConstDefList: ConstDef
   11             | ConstDefList comma_WRAP ConstDef

   12 BType: INT_WRAP
   13      | FLOAT_WRAP
   14      | VOID_WRAP

   15 ConstDef: IDENTIFIER_WRAP ConstArrayDef assign_WRAP ConstInitVal
   16         | IDENTIFIER_WRAP assign_WRAP ConstInitVal

   17 ConstArrayDef: left_bracket_WRAP ConstExp right_bracket_WRAP
   18              | left_bracket_WRAP ConstExp error right_bracket_WRAP
   19              | ConstArrayDef left_bracket_WRAP ConstExp right_bracket_WRAP
   20              | ConstArrayDef left_bracket_WRAP ConstExp error right_bracket_WRAP

   21 ConstInitVal: ConstExp
   22             | left_brace_WRAP right_brace_WRAP
   23             | left_brace_WRAP error
   24             | left_brace_WRAP ConstInitValList right_brace_WRAP
   25             | left_brace_WRAP ConstInitValList error

   26 ConstInitValList: ConstInitVal
   27                 | ConstInitValList comma_WRAP ConstInitVal

   28 VarDecl: BType VarDefList ';'
   29        | BType VarDefList error

   30 VarDefList: VarDef
   31           | VarDefList comma_WRAP VarDef

   32 VarDef: IDENTIFIER_WRAP
   33       | IDENTIFIER_WRAP assign_WRAP InitVal
   34       | IDENTIFIER_WRAP ConstArrayDef
   35       | IDENTIFIER_WRAP ConstArrayDef assign_WRAP InitVal

   36 ArrayDef: left_bracket_WRAP Exp right_bracket_WRAP
   37         | left_bracket_WRAP Exp error right_bracket_WRAP
   38         | ArrayDef left_bracket_WRAP Exp right_bracket_WRAP
   39         | ArrayDef left_bracket_WRAP Exp error right_bracket_WRAP

   40 InitVal: Exp
   41        | left_brace_WRAP right_brace_WRAP
   42        | left_brace_WRAP error
   43        | left_brace_WRAP InitValList right_brace_WRAP
   44        | left_brace_WRAP InitValList error

   45 InitValList: InitVal
   46            | InitValList comma_WRAP InitVal

   47 FuncDef: BType IDENTIFIER_WRAP left_paren_WRAP right_paren_WRAP Block
   48        | BType IDENTIFIER_WRAP left_paren_WRAP FuncFParams right_paren_WRAP Block

   49 FuncFParams: FuncFParam
   50            | FuncFParams comma_WRAP FuncFParam

   51 FuncFParam: BType IDENTIFIER_WRAP
   52           | BType IDENTIFIER_WRAP ArrayDef

   53 Block: left_brace_WRAP right_brace_WRAP
   54      | left_brace_WRAP BlockItemList right_brace_WRAP

   55 BlockItemList: BlockItem
   56              | BlockItemList BlockItem

   57 BlockItem: Decl
   58          | Stmt

   59 Stmt: LVal assign_WRAP Exp ';'
   60     | LVal assign_WRAP Exp error
   61     | Exp ';'
   62     | Exp error
   63     | Block
   64     | IF_WRAP left_paren_WRAP Cond right_paren_WRAP Stmt
   65     | IF_WRAP left_paren_WRAP Cond right_paren_WRAP Stmt ELSE_WRAP Stmt
   66     | WHILE_WRAP left_paren_WRAP Cond right_paren_WRAP Stmt
   67     | BREAK_WRAP ';'
   68     | BREAK_WRAP error
   69     | CONTINUE_WRAP ';'
   70     | CONTINUE_WRAP error
   71     | RETURN_WRAP ';'
   72     | RETURN_WRAP error
   73     | RETURN_WRAP Exp ';'
   74     | RETURN_WRAP Exp error

   75 Exp: AddExp

   76 Cond: LOrExp

   77 LVal: IDENTIFIER_WRAP
   78     | LVal left_bracket_WRAP Exp right_bracket_WRAP
   79     | LVal left_bracket_WRAP Exp error right_bracket_WRAP

   80 PrimaryExp: left_paren_WRAP Exp right_paren_WRAP
   81           | LVal
   82           | Number

   83 Number: INTVAL_WRAP
   84       | FLOATVAL_WRAP

   85 UnaryExp: PrimaryExp
   86         | IDENTIFIER_WRAP left_paren_WRAP right_paren_WRAP
   87         | IDENTIFIER_WRAP left_paren_WRAP FuncRParams right_paren_WRAP
   88         | UnaryOp UnaryExp

   89 UnaryOp: plus_WRAP
   90        | minus_WRAP
   91        | not_WRAP

   92 FuncRParams: Exp
   93            | FuncRParams comma_WRAP Exp

   94 MulExp: UnaryExp
   95       | MulExp mul_WRAP UnaryExp
   96       | MulExp div_WRAP UnaryExp
   97       | MulExp mod_WRAP UnaryExp

   98 AddExp: MulExp
   99       | AddExp plus_WRAP MulExp
  100       | AddExp minus_WRAP MulExp

  101 RelExp: AddExp
  102       | RelExp less_WRAP AddExp
  103       | RelExp greater_WRAP AddExp
  104       | RelExp LE_WRAP AddExp
  105       | RelExp GE_WRAP AddExp

  106 EqExp: RelExp
  107      | EqExp EQ_WRAP RelExp
  108      | EqExp NE_WRAP RelExp

  109 LAndExp: EqExp
  110        | LAndExp AND_WRAP EqExp

  111 LOrExp: LAndExp
  112       | LOrExp OR_WRAP LAndExp

  113 ConstExp: AddExp

  114 INT_WRAP: INT

  115 FLOAT_WRAP: FLOAT

  116 VOID_WRAP: VOID

  117 IDENTIFIER_WRAP: IDENTIFIER

  118 CONST_WRAP: CONST

  119 EQ_WRAP: EQ

  120 NE_WRAP: NE

  121 LE_WRAP: LE

  122 GE_WRAP: GE

  123 AND_WRAP: AND

  124 OR_WRAP: OR

  125 IF_WRAP: IF

  126 ELSE_WRAP: ELSE

  127 WHILE_WRAP: WHILE

  128 RETURN_WRAP: RETURN

  129 BREAK_WRAP: BREAK

  130 CONTINUE_WRAP: CONTINUE

  131 INTVAL_WRAP: INTVAL

  132 FLOATVAL_WRAP: FLOATVAL

  133 plus_WRAP: '+'

  134 minus_WRAP: '-'

  135 mul_WRAP: '*'

  136 div_WRAP: '/'

  137 mod_WRAP: '%'

  138 not_WRAP: '!'

  139 left_paren_WRAP: '('

  140 right_paren_WRAP: ')'

  141 left_brace_WRAP: '{'

  142 right_brace_WRAP: '}'

  143 left_bracket_WRAP: '['

  144 right_bracket_WRAP: ']'

  145 comma_WRAP: ','

  146 less_WRAP: '<'

  147 greater_WRAP: '>'

  148 assign_WRAP: '='


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 138
    '%' (37) 137
    '(' (40) 139
    ')' (41) 140
    '*' (42) 135
    '+' (43) 133
    ',' (44) 145
    '-' (45) 134
    '/' (47) 136
    ';' (59) 8 28 59 61 67 69 71 73
    '<' (60) 146
    '=' (61) 148
    '>' (62) 147
    '[' (91) 143
    ']' (93) 144
    '{' (123) 141
    '}' (125) 142
    error (256) 5 9 18 20 23 25 29 37 39 42 44 60 62 68 70 72 74 79
    EQ (258) 119
    NE (259) 120
    LE (260) 121
    GE (261) 122
    AND (262) 123
    OR (263) 124
    INT (264) 114
    FLOAT (265) 115
    VOID (266) 116
    IF (267) 125
    ELSE (268) 126
    WHILE (269) 127
    RETURN (270) 128
    BREAK (271) 129
    CONTINUE (272) 130
    FOR (273)
    CONST (274) 118
    IDENTIFIER <str> (275) 117
    FLOATVAL <dval> (276) 132
    INTVAL <ival> (277) 131


Nonterminals, with rules where they appear

    $accept (40)
        on left: 0
    CompUnit <node> (41)
        on left: 1 2 3 4 5
        on right: 0 3 4
    Decl <node> (42)
        on left: 6 7
        on right: 2 3 57
    ConstDecl <node> (43)
        on left: 8 9
        on right: 6
    ConstDefList <node> (44)
        on left: 10 11
        on right: 8 9 11
    BType <node> (45)
        on left: 12 13 14
        on right: 8 9 28 29 47 48 51 52
    ConstDef <node> (46)
        on left: 15 16
        on right: 10 11
    ConstArrayDef <node> (47)
        on left: 17 18 19 20
        on right: 15 19 20 34 35
    ConstInitVal <node> (48)
        on left: 21 22 23 24 25
        on right: 15 16 26 27
    ConstInitValList <node> (49)
        on left: 26 27
        on right: 24 25 27
    VarDecl <node> (50)
        on left: 28 29
        on right: 7
    VarDefList <node> (51)
        on left: 30 31
        on right: 28 29 31
    VarDef <node> (52)
        on left: 32 33 34 35
        on right: 30 31
    ArrayDef <node> (53)
        on left: 36 37 38 39
        on right: 38 39 52
    InitVal <node> (54)
        on left: 40 41 42 43 44
        on right: 33 35 45 46
    InitValList <node> (55)
        on left: 45 46
        on right: 43 44 46
    FuncDef <node> (56)
        on left: 47 48
        on right: 1 4
    FuncFParams <node> (57)
        on left: 49 50
        on right: 48 50
    FuncFParam <node> (58)
        on left: 51 52
        on right: 49 50
    Block <node> (59)
        on left: 53 54
        on right: 47 48 63
    BlockItemList <node> (60)
        on left: 55 56
        on right: 54 56
    BlockItem <node> (61)
        on left: 57 58
        on right: 55 56
    Stmt <node> (62)
        on left: 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74
        on right: 58 64 65 66
    Exp <node> (63)
        on left: 75
        on right: 36 37 38 39 40 59 60 61 62 73 74 78 79 80 92 93
    Cond <node> (64)
        on left: 76
        on right: 64 65 66
    LVal <node> (65)
        on left: 77 78 79
        on right: 59 60 78 79 81
    PrimaryExp <node> (66)
        on left: 80 81 82
        on right: 85
    Number <node> (67)
        on left: 83 84
        on right: 82
    UnaryExp <node> (68)
        on left: 85 86 87 88
        on right: 88 94 95 96 97
    UnaryOp <node> (69)
        on left: 89 90 91
        on right: 88
    FuncRParams <node> (70)
        on left: 92 93
        on right: 87 93
    MulExp <node> (71)
        on left: 94 95 96 97
        on right: 95 96 97 98 99 100
    AddExp <node> (72)
        on left: 98 99 100
        on right: 75 99 100 101 102 103 104 105 113
    RelExp <node> (73)
        on left: 101 102 103 104 105
        on right: 102 103 104 105 106 107 108
    EqExp <node> (74)
        on left: 106 107 108
        on right: 107 108 109 110
    LAndExp <node> (75)
        on left: 109 110
        on right: 110 111 112
    LOrExp <node> (76)
        on left: 111 112
        on right: 76 112
    ConstExp <node> (77)
        on left: 113
        on right: 17 18 19 20 21
    INT_WRAP <node> (78)
        on left: 114
        on right: 12
    FLOAT_WRAP <node> (79)
        on left: 115
        on right: 13
    VOID_WRAP <node> (80)
        on left: 116
        on right: 14
    IDENTIFIER_WRAP <node> (81)
        on left: 117
        on right: 15 16 32 33 34 35 47 48 51 52 77 86 87
    CONST_WRAP <node> (82)
        on left: 118
        on right: 8 9
    EQ_WRAP <node> (83)
        on left: 119
        on right: 107
    NE_WRAP <node> (84)
        on left: 120
        on right: 108
    LE_WRAP <node> (85)
        on left: 121
        on right: 104
    GE_WRAP <node> (86)
        on left: 122
        on right: 105
    AND_WRAP <node> (87)
        on left: 123
        on right: 110
    OR_WRAP <node> (88)
        on left: 124
        on right: 112
    IF_WRAP <node> (89)
        on left: 125
        on right: 64 65
    ELSE_WRAP <node> (90)
        on left: 126
        on right: 65
    WHILE_WRAP <node> (91)
        on left: 127
        on right: 66
    RETURN_WRAP <node> (92)
        on left: 128
        on right: 71 72 73 74
    BREAK_WRAP <node> (93)
        on left: 129
        on right: 67 68
    CONTINUE_WRAP <node> (94)
        on left: 130
        on right: 69 70
    INTVAL_WRAP <node> (95)
        on left: 131
        on right: 83
    FLOATVAL_WRAP <node> (96)
        on left: 132
        on right: 84
    plus_WRAP <node> (97)
        on left: 133
        on right: 89 99
    minus_WRAP <node> (98)
        on left: 134
        on right: 90 100
    mul_WRAP <node> (99)
        on left: 135
        on right: 95
    div_WRAP <node> (100)
        on left: 136
        on right: 96
    mod_WRAP <node> (101)
        on left: 137
        on right: 97
    not_WRAP <node> (102)
        on left: 138
        on right: 91
    left_paren_WRAP <node> (103)
        on left: 139
        on right: 47 48 64 65 66 80 86 87
    right_paren_WRAP <node> (104)
        on left: 140
        on right: 47 48 64 65 66 80 86 87
    left_brace_WRAP <node> (105)
        on left: 141
        on right: 22 23 24 25 41 42 43 44 53 54
    right_brace_WRAP <node> (106)
        on left: 142
        on right: 22 24 41 43 53 54
    left_bracket_WRAP <node> (107)
        on left: 143
        on right: 17 18 19 20 36 37 38 39 78 79
    right_bracket_WRAP <node> (108)
        on left: 144
        on right: 17 18 19 20 36 37 38 39 78 79
    comma_WRAP <node> (109)
        on left: 145
        on right: 11 27 31 46 50 93
    less_WRAP <node> (110)
        on left: 146
        on right: 102
    greater_WRAP <node> (111)
        on left: 147
        on right: 103
    assign_WRAP <node> (112)
        on left: 148
        on right: 15 16 33 35 59 60


State 0

    0 $accept: . CompUnit $end

    error  shift, and go to state 1
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4
    CONST  shift, and go to state 5

    CompUnit    go to state 6
    Decl        go to state 7
    ConstDecl   go to state 8
    BType       go to state 9
    VarDecl     go to state 10
    FuncDef     go to state 11
    INT_WRAP    go to state 12
    FLOAT_WRAP  go to state 13
    VOID_WRAP   go to state 14
    CONST_WRAP  go to state 15


State 1

    5 CompUnit: error .

    $default  reduce using rule 5 (CompUnit)


State 2

  114 INT_WRAP: INT .

    $default  reduce using rule 114 (INT_WRAP)


State 3

  115 FLOAT_WRAP: FLOAT .

    $default  reduce using rule 115 (FLOAT_WRAP)


State 4

  116 VOID_WRAP: VOID .

    $default  reduce using rule 116 (VOID_WRAP)


State 5

  118 CONST_WRAP: CONST .

    $default  reduce using rule 118 (CONST_WRAP)


State 6

    0 $accept: CompUnit . $end
    3 CompUnit: CompUnit . Decl
    4         | CompUnit . FuncDef

    $end   shift, and go to state 16
    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4
    CONST  shift, and go to state 5

    Decl        go to state 17
    ConstDecl   go to state 8
    BType       go to state 9
    VarDecl     go to state 10
    FuncDef     go to state 18
    INT_WRAP    go to state 12
    FLOAT_WRAP  go to state 13
    VOID_WRAP   go to state 14
    CONST_WRAP  go to state 15


State 7

    2 CompUnit: Decl .

    $default  reduce using rule 2 (CompUnit)


State 8

    6 Decl: ConstDecl .

    $default  reduce using rule 6 (Decl)


State 9

   28 VarDecl: BType . VarDefList ';'
   29        | BType . VarDefList error
   47 FuncDef: BType . IDENTIFIER_WRAP left_paren_WRAP right_paren_WRAP Block
   48        | BType . IDENTIFIER_WRAP left_paren_WRAP FuncFParams right_paren_WRAP Block

    IDENTIFIER  shift, and go to state 19

    VarDefList       go to state 20
    VarDef           go to state 21
    IDENTIFIER_WRAP  go to state 22


State 10

    7 Decl: VarDecl .

    $default  reduce using rule 7 (Decl)


State 11

    1 CompUnit: FuncDef .

    $default  reduce using rule 1 (CompUnit)


State 12

   12 BType: INT_WRAP .

    $default  reduce using rule 12 (BType)


State 13

   13 BType: FLOAT_WRAP .

    $default  reduce using rule 13 (BType)


State 14

   14 BType: VOID_WRAP .

    $default  reduce using rule 14 (BType)


State 15

    8 ConstDecl: CONST_WRAP . BType ConstDefList ';'
    9          | CONST_WRAP . BType ConstDefList error

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4

    BType       go to state 23
    INT_WRAP    go to state 12
    FLOAT_WRAP  go to state 13
    VOID_WRAP   go to state 14


State 16

    0 $accept: CompUnit $end .

    $default  accept


State 17

    3 CompUnit: CompUnit Decl .

    $default  reduce using rule 3 (CompUnit)


State 18

    4 CompUnit: CompUnit FuncDef .

    $default  reduce using rule 4 (CompUnit)


State 19

  117 IDENTIFIER_WRAP: IDENTIFIER .

    $default  reduce using rule 117 (IDENTIFIER_WRAP)


State 20

   28 VarDecl: BType VarDefList . ';'
   29        | BType VarDefList . error
   31 VarDefList: VarDefList . comma_WRAP VarDef

    error  shift, and go to state 24
    ';'    shift, and go to state 25
    ','    shift, and go to state 26

    comma_WRAP  go to state 27


State 21

   30 VarDefList: VarDef .

    $default  reduce using rule 30 (VarDefList)


State 22

   32 VarDef: IDENTIFIER_WRAP .
   33       | IDENTIFIER_WRAP . assign_WRAP InitVal
   34       | IDENTIFIER_WRAP . ConstArrayDef
   35       | IDENTIFIER_WRAP . ConstArrayDef assign_WRAP InitVal
   47 FuncDef: BType IDENTIFIER_WRAP . left_paren_WRAP right_paren_WRAP Block
   48        | BType IDENTIFIER_WRAP . left_paren_WRAP FuncFParams right_paren_WRAP Block

    '('  shift, and go to state 28
    '['  shift, and go to state 29
    '='  shift, and go to state 30

    $default  reduce using rule 32 (VarDef)

    ConstArrayDef      go to state 31
    left_paren_WRAP    go to state 32
    left_bracket_WRAP  go to state 33
    assign_WRAP        go to state 34


State 23

    8 ConstDecl: CONST_WRAP BType . ConstDefList ';'
    9          | CONST_WRAP BType . ConstDefList error

    IDENTIFIER  shift, and go to state 19

    ConstDefList     go to state 35
    ConstDef         go to state 36
    IDENTIFIER_WRAP  go to state 37


State 24

   29 VarDecl: BType VarDefList error .

    $default  reduce using rule 29 (VarDecl)


State 25

   28 VarDecl: BType VarDefList ';' .

    $default  reduce using rule 28 (VarDecl)


State 26

  145 comma_WRAP: ',' .

    $default  reduce using rule 145 (comma_WRAP)


State 27

   31 VarDefList: VarDefList comma_WRAP . VarDef

    IDENTIFIER  shift, and go to state 19

    VarDef           go to state 38
    IDENTIFIER_WRAP  go to state 39


State 28

  139 left_paren_WRAP: '(' .

    $default  reduce using rule 139 (left_paren_WRAP)


State 29

  143 left_bracket_WRAP: '[' .

    $default  reduce using rule 143 (left_bracket_WRAP)


State 30

  148 assign_WRAP: '=' .

    $default  reduce using rule 148 (assign_WRAP)


State 31

   19 ConstArrayDef: ConstArrayDef . left_bracket_WRAP ConstExp right_bracket_WRAP
   20              | ConstArrayDef . left_bracket_WRAP ConstExp error right_bracket_WRAP
   34 VarDef: IDENTIFIER_WRAP ConstArrayDef .
   35       | IDENTIFIER_WRAP ConstArrayDef . assign_WRAP InitVal

    '['  shift, and go to state 29
    '='  shift, and go to state 30

    $default  reduce using rule 34 (VarDef)

    left_bracket_WRAP  go to state 40
    assign_WRAP        go to state 41


State 32

   47 FuncDef: BType IDENTIFIER_WRAP left_paren_WRAP . right_paren_WRAP Block
   48        | BType IDENTIFIER_WRAP left_paren_WRAP . FuncFParams right_paren_WRAP Block

    INT    shift, and go to state 2
    FLOAT  shift, and go to state 3
    VOID   shift, and go to state 4
    ')'    shift, and go to state 42

    BType             go to state 43
    FuncFParams       go to state 44
    FuncFParam        go to state 45
    INT_WRAP          go to state 12
    FLOAT_WRAP        go to state 13
    VOID_WRAP         go to state 14
    right_paren_WRAP  go to state 46


State 33

   17 ConstArrayDef: left_bracket_WRAP . ConstExp right_bracket_WRAP
   18              | left_bracket_WRAP . ConstExp error right_bracket_WRAP

    IDENTIFIER  shift, and go to state 19
    FLOATVAL    shift, and go to state 47
    INTVAL      shift, and go to state 48
    '+'         shift, and go to state 49
    '-'         shift, and go to state 50
    '!'         shift, and go to state 51
    '('         shift, and go to state 28

    LVal             go to state 52
    PrimaryExp       go to state 53
    Number           go to state 54
    UnaryExp         go to state 55
    UnaryOp          go to state 56
    MulExp           go to state 57
    AddExp           go to state 58
    ConstExp         go to state 59
    IDENTIFIER_WRAP  go to state 60
    INTVAL_WRAP      go to state 61
    FLOATVAL_WRAP    go to state 62
    plus_WRAP        go to state 63
    minus_WRAP       go to state 64
    not_WRAP         go to state 65
    left_paren_WRAP  go to state 66


State 34

   33 VarDef: IDENTIFIER_WRAP assign_WRAP . InitVal

    IDENTIFIER  shift, and go to state 19
    FLOATVAL    shift, and go to state 47
    INTVAL      shift, and go to state 48
    '+'         shift, and go to state 49
    '-'         shift, and go to state 50
    '!'         shift, and go to state 51
    '('         shift, and go to state 28
    '{'         shift, and go to state 67

    InitVal          go to state 68
    Exp              go to state 69
    LVal             go to state 52
    PrimaryExp       go to state 53
    Number           go to state 54
    UnaryExp         go to state 55
    UnaryOp          go to state 56
    MulExp           go to state 57
    AddExp           go to state 70
    IDENTIFIER_WRAP  go to state 60
    INTVAL_WRAP      go to state 61
    FLOATVAL_WRAP    go to state 62
    plus_WRAP        go to state 63
    minus_WRAP       go to state 64
    not_WRAP         go to state 65
    left_paren_WRAP  go to state 66
    left_brace_WRAP  go to state 71


State 35

    8 ConstDecl: CONST_WRAP BType ConstDefList . ';'
    9          | CONST_WRAP BType ConstDefList . error
   11 ConstDefList: ConstDefList . comma_WRAP ConstDef

    error  shift, and go to state 72
    ';'    shift, and go to state 73
    ','    shift, and go to state 26

    comma_WRAP  go to state 74


State 36

   10 ConstDefList: ConstDef .

    $default  reduce using rule 10 (ConstDefList)


State 37

   15 ConstDef: IDENTIFIER_WRAP . ConstArrayDef assign_WRAP ConstInitVal
   16         | IDENTIFIER_WRAP . assign_WRAP ConstInitVal

    '['  shift, and go to state 29
    '='  shift, and go to state 30

    ConstArrayDef      go to state 75
    left_bracket_WRAP  go to state 33
    assign_WRAP        go to state 76


State 38

   31 VarDefList: VarDefList comma_WRAP VarDef .

    $default  reduce using rule 31 (VarDefList)


State 39

   32 VarDef: IDENTIFIER_WRAP .
   33       | IDENTIFIER_WRAP . assign_WRAP InitVal
   34       | IDENTIFIER_WRAP . ConstArrayDef
   35       | IDENTIFIER_WRAP . ConstArrayDef assign_WRAP InitVal

    '['  shift, and go to state 29
    '='  shift, and go to state 30

    $default  reduce using rule 32 (VarDef)

    ConstArrayDef      go to state 31
    left_bracket_WRAP  go to state 33
    assign_WRAP        go to state 34


State 40

   19 ConstArrayDef: ConstArrayDef left_bracket_WRAP . ConstExp right_bracket_WRAP
   20              | ConstArrayDef left_bracket_WRAP . ConstExp error right_bracket_WRAP

    IDENTIFIER  shift, and go to state 19
    FLOATVAL    shift, and go to state 47
    INTVAL      shift, and go to state 48
    '+'         shift, and go to state 49
    '-'         shift, and go to state 50
    '!'         shift, and go to state 51
    '('         shift, and go to state 28

    LVal             go to state 52
    PrimaryExp       go to state 53
    Number           go to state 54
    UnaryExp         go to state 55
    UnaryOp          go to state 56
    MulExp           go to state 57
    AddExp           go to state 58
    ConstExp         go to state 77
    IDENTIFIER_WRAP  go to state 60
    INTVAL_WRAP      go to state 61
    FLOATVAL_WRAP    go to state 62
    plus_WRAP        go to state 63
    minus_WRAP       go to state 64
    not_WRAP         go to state 65
    left_paren_WRAP  go to state 66


State 41

   35 VarDef: IDENTIFIER_WRAP ConstArrayDef assign_WRAP . InitVal

    IDENTIFIER  shift, and go to state 19
    FLOATVAL    shift, and go to state 47
    INTVAL      shift, and go to state 48
    '+'         shift, and go to state 49
    '-'         shift, and go to state 50
    '!'         shift, and go to state 51
    '('         shift, and go to state 28
    '{'         shift, and go to state 67

    InitVal          go to state 78
    Exp              go to state 69
    LVal             go to state 52
    PrimaryExp       go to state 53
    Number           go to state 54
    UnaryExp         go to state 55
    UnaryOp          go to state 56
    MulExp           go to state 57
    AddExp           go to state 70
    IDENTIFIER_WRAP  go to state 60
    INTVAL_WRAP      go to state 61
    FLOATVAL_WRAP    go to state 62
    plus_WRAP        go to state 63
    minus_WRAP       go to state 64
    not_WRAP         go to state 65
    left_paren_WRAP  go to state 66
    left_brace_WRAP  go to state 71


State 42

  140 right_paren_WRAP: ')' .

    $default  reduce using rule 140 (right_paren_WRAP)


State 43

   51 FuncFParam: BType . IDENTIFIER_WRAP
   52           | BType . IDENTIFIER_WRAP ArrayDef

    IDENTIFIER  shift, and go to state 19

    IDENTIFIER_WRAP  go to state 79


State 44

   48 FuncDef: BType IDENTIFIER_WRAP left_paren_WRAP FuncFParams . right_paren_WRAP Block
   50 FuncFParams: FuncFParams . comma_WRAP FuncFParam

    ')'  shift, and go to state 42
    ','  shift, and go to state 26

    right_paren_WRAP  go to state 80
    comma_WRAP        go to state 81


State 45

   49 FuncFParams: FuncFParam .

    $default  reduce using rule 49 (FuncFParams)


State 46

   47 FuncDef: BType IDENTIFIER_WRAP left_paren_WRAP right_paren_WRAP . Block

    '{'  shift, and go to state 67

    Block            go to state 82
    left_brace_WRAP  go to state 83


State 47

  132 FLOATVAL_WRAP: FLOATVAL .

    $default  reduce using rule 132 (FLOATVAL_WRAP)


State 48

  131 INTVAL_WRAP: INTVAL .

    $default  reduce using rule 131 (INTVAL_WRAP)


State 49

  133 plus_WRAP: '+' .

    $default  reduce using rule 133 (plus_WRAP)


State 50

  134 minus_WRAP: '-' .

    $default  reduce using rule 134 (minus_WRAP)


State 51

  138 not_WRAP: '!' .

    $default  reduce using rule 138 (not_WRAP)


State 52

   78 LVal: LVal . left_bracket_WRAP Exp right_bracket_WRAP
   79     | LVal . left_bracket_WRAP Exp error right_bracket_WRAP
   81 PrimaryExp: LVal .

    '['  shift, and go to state 29

    $default  reduce using rule 81 (PrimaryExp)

    left_bracket_WRAP  go to state 84


State 53

   85 UnaryExp: PrimaryExp .

    $default  reduce using rule 85 (UnaryExp)


State 54

   82 PrimaryExp: Number .

    $default  reduce using rule 82 (PrimaryExp)


State 55

   94 MulExp: UnaryExp .

    $default  reduce using rule 94 (MulExp)


State 56

   88 UnaryExp: UnaryOp . UnaryExp

    IDENTIFIER  shift, and go to state 19
    FLOATVAL    shift, and go to state 47
    INTVAL      shift, and go to state 48
    '+'         shift, and go to state 49
    '-'         shift, and go to state 50
    '!'         shift, and go to state 51
    '('         shift, and go to state 28

    LVal             go to state 52
    PrimaryExp       go to state 53
    Number           go to state 54
    UnaryExp         go to state 85
    UnaryOp          go to state 56
    IDENTIFIER_WRAP  go to state 60
    INTVAL_WRAP      go to state 61
    FLOATVAL_WRAP    go to state 62
    plus_WRAP        go to state 63
    minus_WRAP       go to state 64
    not_WRAP         go to state 65
    left_paren_WRAP  go to state 66


State 57

   95 MulExp: MulExp . mul_WRAP UnaryExp
   96       | MulExp . div_WRAP UnaryExp
   97       | MulExp . mod_WRAP UnaryExp
   98 AddExp: MulExp .

    '*'  shift, and go to state 86
    '/'  shift, and go to state 87
    '%'  shift, and go to state 88

    $default  reduce using rule 98 (AddExp)

    mul_WRAP  go to state 89
    div_WRAP  go to state 90
    mod_WRAP  go to state 91


State 58

   99 AddExp: AddExp . plus_WRAP MulExp
  100       | AddExp . minus_WRAP MulExp
  113 ConstExp: AddExp .

    '+'  shift, and go to state 49
    '-'  shift, and go to state 50

    $default  reduce using rule 113 (ConstExp)

    plus_WRAP   go to state 92
    minus_WRAP  go to state 93


State 59

   17 ConstArrayDef: left_bracket_WRAP ConstExp . right_bracket_WRAP
   18              | left_bracket_WRAP ConstExp . error right_bracket_WRAP

    error  shift, and go to state 94
    ']'    shift, and go to state 95

    right_bracket_WRAP  go to state 96


State 60

   77 LVal: IDENTIFIER_WRAP .
   86 UnaryExp: IDENTIFIER_WRAP . left_paren_WRAP right_paren_WRAP
   87         | IDENTIFIER_WRAP . left_paren_WRAP FuncRParams right_paren_WRAP

    '('  shift, and go to state 28

    $default  reduce using rule 77 (LVal)

    left_paren_WRAP  go to state 97


State 61

   83 Number: INTVAL_WRAP .

    $default  reduce using rule 83 (Number)


State 62

   84 Number: FLOATVAL_WRAP .

    $default  reduce using rule 84 (Number)


State 63

   89 UnaryOp: plus_WRAP .

    $default  reduce using rule 89 (UnaryOp)


State 64

   90 UnaryOp: minus_WRAP .

    $default  reduce using rule 90 (UnaryOp)


State 65

   91 UnaryOp: not_WRAP .

    $default  reduce using rule 91 (UnaryOp)


State 66

   80 PrimaryExp: left_paren_WRAP . Exp right_paren_WRAP

    IDENTIFIER  shift, and go to state 19
    FLOATVAL    shift, and go to state 47
    INTVAL      shift, and go to state 48
    '+'         shift, and go to state 49
    '-'         shift, and go to state 50
    '!'         shift, and go to state 51
    '('         shift, and go to state 28

    Exp              go to state 98
    LVal             go to state 52
    PrimaryExp       go to state 53
    Number           go to state 54
    UnaryExp         go to state 55
    UnaryOp          go to state 56
    MulExp           go to state 57
    AddExp           go to state 70
    IDENTIFIER_WRAP  go to state 60
    INTVAL_WRAP      go to state 61
    FLOATVAL_WRAP    go to state 62
    plus_WRAP        go to state 63
    minus_WRAP       go to state 64
    not_WRAP         go to state 65
    left_paren_WRAP  go to state 66


State 67

  141 left_brace_WRAP: '{' .

    $default  reduce using rule 141 (left_brace_WRAP)


State 68

   33 VarDef: IDENTIFIER_WRAP assign_WRAP InitVal .

    $default  reduce using rule 33 (VarDef)


State 69

   40 InitVal: Exp .

    $default  reduce using rule 40 (InitVal)


State 70

   75 Exp: AddExp .
   99 AddExp: AddExp . plus_WRAP MulExp
  100       | AddExp . minus_WRAP MulExp

    '+'  shift, and go to state 49
    '-'  shift, and go to state 50

    $default  reduce using rule 75 (Exp)

    plus_WRAP   go to state 92
    minus_WRAP  go to state 93


State 71

   41 InitVal: left_brace_WRAP . right_brace_WRAP
   42        | left_brace_WRAP . error
   43        | left_brace_WRAP . InitValList right_brace_WRAP
   44        | left_brace_WRAP . InitValList error

    error       shift, and go to state 99
    IDENTIFIER  shift, and go to state 19
    FLOATVAL    shift, and go to state 47
    INTVAL      shift, and go to state 48
    '+'         shift, and go to state 49
    '-'         shift, and go to state 50
    '!'         shift, and go to state 51
    '('         shift, and go to state 28
    '{'         shift, and go to state 67
    '}'         shift, and go to state 100

    InitVal           go to state 101
    InitValList       go to state 102
    Exp               go to state 69
    LVal              go to state 52
    PrimaryExp        go to state 53
    Number            go to state 54
    UnaryExp          go to state 55
    UnaryOp           go to state 56
    MulExp            go to state 57
    AddExp            go to state 70
    IDENTIFIER_WRAP   go to state 60
    INTVAL_WRAP       go to state 61
    FLOATVAL_WRAP     go to state 62
    plus_WRAP         go to state 63
    minus_WRAP        go to state 64
    not_WRAP          go to state 65
    left_paren_WRAP   go to state 66
